--- a/src/Challenge.API/appsettings.json
+++ b/src/Challenge.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "UseInMemoryDatabase": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=CHALLENGEDB;User ID=sa;Password=1q2w3e4r@#$"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
