- Adjusted the infrastructure dependency injection - Added the seed database option - Adjusted the swagger to deal with JWT Token - Adjuste the MediaR and Dependency Injection - Created the ApiControllerBase - Created the UserController

--- a/src/Challenge.API/appsettings.json
+++ b/src/Challenge.API/appsettings.json
@@ -3,6 +3,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=CHALLENGEDB;User ID=sa;Password=1q2w3e4r@#$"
   },
+  "JWT": {
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
