--- a/src/Challenge.Infrastructure/Challenge.Infrastructure.csproj
+++ b/src/Challenge.Infrastructure/Challenge.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Challenge.Application\Challenge.Application.csproj" />
     <ProjectReference Include="..\Challenge.Core\Challenge.Core.csproj" />
   </ItemGroup>
 
