-- Added the HashService. -- Asjusted the AccountLoginCommand to verify and store the Hash password.

--- a/src/Challenge.API/appsettings.json
+++ b/src/Challenge.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": true,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=CHALLENGEDB;User ID=sa;Password=1q2w3e4r@#$"
+    "SQLSERVER": "Server=localhost,1433;Database=CHALLENGEDB;User ID=sa;Password=1q2w3e4r@#$"
   },
   "JWT": {
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
