--- a/src/Challenge.API/appsettings.json
+++ b/src/Challenge.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  //HACK: Set false to run in physical database (SQLSERVER)
   "UseInMemoryDatabase": true,
   "ConnectionStrings": {
     "SQLSERVER": "Server=localhost,1433;Database=CHALLENGEDB;User ID=sa;Password=1q2w3e4r@#$"
